# Auto_Alias_cv

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  ~$inese Optics Letters.docx  启动服务  对比  手动G2  提取主特征线.py  训练.md
checkpoints/: manual_curve_decoder_smoke.pt  tiny_decoder.pt
corrections/: test.topology_corrections.json
corrections_test/: test.topology_corrections.json
corrections_test_manual/: test.topology_corrections.json
data/: manual_curve_supervision.json  synthetic_tiny.json
docs/: AutoAlias_Desktop_Editor_User_Guide.md  RUNNING.md  industrial_backend_contract.md
examples/: points_s_curve.json
out_cmd/: curves.dxf  curves.igs  curves.json  quality.json
out_cmd/out_test_fill_v6/: 430AutoAlias - 快捷方式.lnk
out_torch/: curves.dxf  curves.igs  curves.json  quality.json
scripts/: autoalias.cmd  autoalias.ps1  autoalias_gui.cmd  autoalias_next_api.cmd  autoalias_next_build.cmd  autoalias_next_frontend.cmd  generate_gui_user_guide_pdf.py  generate_synthetic_dataset.py  qwen_vl_local_web.py  smoke_test.py
src/autoalias/: __init__.py  __main__.py  cli.py  models.py  pipeline.py  quality.py
src/autoalias/exporters/: __init__.py  coverage_exporter.py  dxf_exporter.py  iges_exporter.py  json_exporter.py  svg_exporter.py  wire_exporter.py
src/autoalias/geometry/: Stage.stp  __init__.py  beautify.py  bezier.py  corner.py  curve_profile.py  fitting.py  polyline.py  special.py  (+2 more)
tests/: test_exporters.py  test_single_span_fitter.py
webapp/: README.md  index.html  vite.config.ts
webapp/src/: App.tsx  api.ts  styles.css  types.ts
(+27 files in other folders)
